--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vue-amap": "^0.5.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
@@ -25,7 +26,6 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "vue-amap": "^0.5.10",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
